--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-roulette",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "react native roulette",
   "main": "Roulette.js",
   "scripts": {
@@ -19,7 +19,7 @@
     "react-native-roulette"
   ],
   "dependencies": {
-
+    "prop-types": "^15.6.2"
   },
   "peerDependencies": {
     "react-native": ">=0.28 <1.0"
